Added tests and implementation for hw5extra