@@ -1,9 +1,9 @@
-package edu.java.scrapper.dao;
+package edu.java.scrapper.dao.jooq;
 
 import edu.java.scrapper.IntegrationTest;
-import edu.java.scrapper.dao.repository.JdbcChatDao;
-import edu.java.scrapper.dao.repository.JdbcLinkDao;
-import edu.java.scrapper.dao.repository.JdbcTrackedLinkDao;
+import edu.java.scrapper.dao.repository.jooq.JooqChatRepository;
+import edu.java.scrapper.dao.repository.jooq.JooqLinkRepository;
+import edu.java.scrapper.dao.repository.jooq.JooqTrackedLinkRepository;
 import edu.java.scrapper.dto.Chat;
 import edu.java.scrapper.dto.Link;
 import org.assertj.core.api.Assertions;
@@ -20,13 +20,13 @@ import java.time.ZoneOffset;
 import java.util.List;
 
 @SpringBootTest
-public class JdbcTrackedLinkDaoTest extends IntegrationTest {
+public class JooqTrackedLinkRepositoryTest extends IntegrationTest {
     @Autowired
-    private JdbcChatDao chatDao;
+    private JooqChatRepository chatRepository;
     @Autowired
-    private JdbcLinkDao linkDao;
+    private JooqLinkRepository linkRepository;
     @Autowired
-    private JdbcTrackedLinkDao trackedLinkDao;
+    private JooqTrackedLinkRepository trackedLinkRepository;
 
     @Test
     @Transactional
@@ -40,14 +40,14 @@ public class JdbcTrackedLinkDaoTest extends IntegrationTest {
         link.setUpdatedAt(OffsetDateTime.ofInstant(Instant.ofEpochSecond(1705410153L), ZoneOffset.UTC));
         link.setLastCheck(OffsetDateTime.ofInstant(Instant.ofEpochSecond(1705410153L), ZoneOffset.UTC));
 
-        chatDao.save(chat);
-        linkDao.save(link);
-        Chat chatFromDB = chatDao.getAll().getFirst();
-        Link linkFromDB = linkDao.getAll().getFirst();
+        chatRepository.save(chat);
+        linkRepository.save(link);
+        Chat chatFromDB = chatRepository.getAll().getFirst();
+        Link linkFromDB = linkRepository.getAll().getFirst();
 
-        trackedLinkDao.save(chatFromDB.getChatId(), linkFromDB.getLinkId());
+        trackedLinkRepository.save(chatFromDB.getChatId(), linkFromDB.getLinkId());
 
-        Integer actual = trackedLinkDao.getNumberOfLinksById(linkFromDB.getLinkId());
+        Integer actual = trackedLinkRepository.getNumberOfLinksById(linkFromDB.getLinkId());
 
         Assertions.assertThat(actual).isEqualTo(expected);
     }
@@ -64,15 +64,15 @@ public class JdbcTrackedLinkDaoTest extends IntegrationTest {
         link.setUpdatedAt(OffsetDateTime.ofInstant(Instant.ofEpochSecond(2000000000L), ZoneOffset.UTC));
         link.setLastCheck(OffsetDateTime.ofInstant(Instant.ofEpochSecond(2000000000L), ZoneOffset.UTC));
 
-        chatDao.save(chat);
-        linkDao.save(link);
-        Chat chats = chatDao.getAll().getFirst();
-        Link linkFromDB = linkDao.getAll().getFirst();
+        chatRepository.save(chat);
+        linkRepository.save(link);
+        Chat chats = chatRepository.getAll().getFirst();
+        Link linkFromDB = linkRepository.getAll().getFirst();
 
-        trackedLinkDao.save(chats.getChatId(), linkFromDB.getLinkId());
-        trackedLinkDao.delete(chats.getChatId(), linkFromDB.getLinkId());
+        trackedLinkRepository.save(chats.getChatId(), linkFromDB.getLinkId());
+        trackedLinkRepository.delete(chats.getChatId(), linkFromDB.getLinkId());
 
-        Integer actual = trackedLinkDao.getNumberOfLinksById(linkFromDB.getLinkId());
+        Integer actual = trackedLinkRepository.getNumberOfLinksById(linkFromDB.getLinkId());
 
         Assertions.assertThat(actual).isEqualTo(expected);
     }
@@ -96,16 +96,16 @@ public class JdbcTrackedLinkDaoTest extends IntegrationTest {
         link2.setLastCheck(OffsetDateTime.ofInstant(Instant.ofEpochSecond(2000000000L), ZoneOffset.UTC));
         List<Link> expected = List.of(link1);
 
-        chatDao.save(chat1);
-        chatDao.save(chat2);
-        linkDao.save(link1);
-        linkDao.save(link2);
-        List<Chat> chats = chatDao.getAll();
-        Link linkFromDB = linkDao.getAll().getFirst();
-        trackedLinkDao.save(chats.get(0).getChatId(), linkFromDB.getLinkId());
-        trackedLinkDao.save(chats.get(1).getChatId(), linkFromDB.getLinkId());
+        chatRepository.save(chat1);
+        chatRepository.save(chat2);
+        linkRepository.save(link1);
+        linkRepository.save(link2);
+        List<Chat> chats = chatRepository.getAll();
+        Link linkFromDB = linkRepository.getAll().getFirst();
+        trackedLinkRepository.save(chats.get(0).getChatId(), linkFromDB.getLinkId());
+        trackedLinkRepository.save(chats.get(1).getChatId(), linkFromDB.getLinkId());
 
-        List<Link> actual = trackedLinkDao.getAllDistinctLinks();
+        List<Link> actual = trackedLinkRepository.getAllDistinctLinks();
         Assertions.assertThat(actual).containsExactlyInAnyOrderElementsOf(expected);
     }
 
@@ -132,18 +132,18 @@ public class JdbcTrackedLinkDaoTest extends IntegrationTest {
         link3.setLastCheck(OffsetDateTime.ofInstant(Instant.ofEpochSecond(2100000000L), ZoneOffset.UTC));
         List<Link> expected = List.of(link1, link2);
 
-        chatDao.save(chat1);
-        chatDao.save(chat2);
-        linkDao.save(link1);
-        linkDao.save(link2);
-        linkDao.save(link3);
-        List<Chat> chats = chatDao.getAll();
-        List<Link> links = linkDao.getAll();
-        trackedLinkDao.save(chats.get(0).getChatId(), links.get(0).getLinkId());
-        trackedLinkDao.save(chats.get(0).getChatId(), links.get(1).getLinkId());
-        trackedLinkDao.save(chats.get(1).getChatId(), links.get(2).getLinkId());
+        chatRepository.save(chat1);
+        chatRepository.save(chat2);
+        linkRepository.save(link1);
+        linkRepository.save(link2);
+        linkRepository.save(link3);
+        List<Chat> chats = chatRepository.getAll();
+        List<Link> links = linkRepository.getAll();
+        trackedLinkRepository.save(chats.get(0).getChatId(), links.get(0).getLinkId());
+        trackedLinkRepository.save(chats.get(0).getChatId(), links.get(1).getLinkId());
+        trackedLinkRepository.save(chats.get(1).getChatId(), links.get(2).getLinkId());
 
-        List<Link> actual = trackedLinkDao.getAllLinksByChatId(chats.get(0).getChatId());
+        List<Link> actual = trackedLinkRepository.getAllLinksByChatId(chats.get(0).getChatId());
 
         Assertions.assertThat(actual).containsExactlyInAnyOrderElementsOf(expected);
     }
@@ -173,21 +173,20 @@ public class JdbcTrackedLinkDaoTest extends IntegrationTest {
         link3.setLastCheck(OffsetDateTime.ofInstant(Instant.ofEpochSecond(2100000000L), ZoneOffset.UTC));
         List<Chat> expected = List.of(chat1, chat2);
 
-        chatDao.save(chat1);
-        chatDao.save(chat2);
-        chatDao.save(chat3);
-        linkDao.save(link1);
-        linkDao.save(link2);
-        linkDao.save(link3);
-        List<Chat> chats = chatDao.getAll();
-        List<Link> links = linkDao.getAll();
-        trackedLinkDao.save(chats.get(0).getChatId(), links.get(0).getLinkId());
-        trackedLinkDao.save(chats.get(1).getChatId(), links.get(0).getLinkId());
-        trackedLinkDao.save(chats.get(1).getChatId(), links.get(1).getLinkId());
-        trackedLinkDao.save(chats.get(2).getChatId(), links.get(2).getLinkId());
+        chatRepository.save(chat1);
+        chatRepository.save(chat2);
+        chatRepository.save(chat3);
+        linkRepository.save(link1);
+        linkRepository.save(link2);
+        linkRepository.save(link3);
+        List<Chat> chats = chatRepository.getAll();
+        List<Link> links = linkRepository.getAll();
+        trackedLinkRepository.save(chats.get(0).getChatId(), links.get(0).getLinkId());
+        trackedLinkRepository.save(chats.get(1).getChatId(), links.get(0).getLinkId());
+        trackedLinkRepository.save(chats.get(1).getChatId(), links.get(1).getLinkId());
+        trackedLinkRepository.save(chats.get(2).getChatId(), links.get(2).getLinkId());
 
-
-        List<Chat> actual = trackedLinkDao.getAllChatsByLinkId(links.get(0).getLinkId());
+        List<Chat> actual = trackedLinkRepository.getAllChatsByLinkId(links.get(0).getLinkId());
 
         Assertions.assertThat(actual).containsExactlyInAnyOrderElementsOf(expected);
     }
